ingress/ingress-rules-besu.yml
---
# ingress-nginx IngressClass
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: network-nginx
  namespace: quorum
spec:
  controller: k8s.io/network-ingress-nginx

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: besu-ingress-routes
  namespace: quorum
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite (?i)/explorer/(.*) /explorer/$1 break;
      rewrite (?i)/explorer$ /explorer break;

    nginx.ingress.kubernetes.io/rewrite-target: /
    #nginx.ingress.kubernetes.io/whitelist-source-range: w.x.y.z/32,a.b.c.d/32

spec:
  ingressClassName: network-nginx
  rules:
    - host: blockscout.chain.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: blockscout
                port:
                  number: 4000
    - host: explorer.chain.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: quorum-explorer
                port:
                  number: 80
    - host: nodes.chain.test
      http:
        paths:
          - path: /validator-1
            pathType: Prefix
            backend:
              service:
                name: besu-node-validator-1
                port:
                  number: 8545
          - path: /validator-2
            pathType: Prefix
            backend:
              service:
                name: besu-node-validator-2
                port:
                  number: 8545
          - path: /validator-3
            pathType: Prefix
            backend:
              service:
                name: besu-node-validator-3
                port:
                  number: 8545
          - path: /validator-4
            pathType: Prefix
            backend:
              service:
                name: besu-node-validator-4
                port:
                  number: 8545
    - host: grafana.chain.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: monitoring-grafana
                port:
                  number: 3000
